fixed alignment of the projects on home.js

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,5 @@
 .header{
-height: 90vh;
+height: 50vh;
 background-image: url(https://www.uplers.com/wp-content/uploads/2020/05/Essential-Skills-to-look-for-when-you-Hire-Front-end-Developers.jpg);
 background-size: cover;
 background-position: center;
